Glass effect done

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,5 +11,13 @@
 body {
   font-family: 'Roboto', sans-serif;
   line-height: 1.5;
-  background-color: #f1f1f1;
+  background: #659999;  /* fallback for old browsers */
+background: -webkit-linear-gradient(45deg, #e1650d 5%, #659999 95%);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(45deg, #e1650d 5%, #659999 95%); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
+
+
+  
+
 }
