--- a/components/Layout/layout.module.css
+++ b/components/Layout/layout.module.css
@@ -3,5 +3,9 @@
     flex-direction: column;
     min-height: 100vh;
     width: 90vw;
-    margin: 10px auto 0;
+    margin: 20px auto;
+    backdrop-filter: blur(40px);
+    background-color: rgba(255, 255, 255, 0.211);
+    border-radius: 30px;
+    padding: 20px;
 }
