--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -1,10 +1,10 @@
 .navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 0.8rem;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    background-color: #f1f1f1;
+    background-color: transparent;
 }
 
 .navbar ul {
