--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     flex-wrap: wrap;
     
+    
 }
 
 .cryptoWrapper {
@@ -18,6 +19,11 @@
     box-shadow: 4px 2px 10px rgba(0, 0, 0, 0.212);
     margin-bottom: 20px;
     /* border: 2px solid #7971EA; */
-    background-color: rgb(255, 255, 255, 0.2);
-    backdrop-filter: blur(10px);
+    background-color: #ffffff1b;
+    backdrop-filter: blur(30px);
+    --webkit--backdrop-filter: blur(10px);
+}
+
+.boxShadow {
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.112);
 }
